hphp/hack/test/typecheck/assignment_sequencing/unseq_default_arg.php.exp
File "unseq_default_arg.php", line 4, characters 33-34:
Unsequenced modifications to local variable. Modified here (Typing[4144])
File "unseq_default_arg.php", line 4, characters 40-41:
And also modified here
